--- a/app/src/main/res/layout/activity_sliver_test.xml
+++ b/app/src/main/res/layout/activity_sliver_test.xml
@@ -29,6 +29,13 @@
         android:layout_height="wrap_content"
         android:text="获取调用栈防止suspendTimeOut"
         />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_replace_suspend_method"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="替换suspend函数测试"
+        />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_suspend_main_thread"
         android:layout_width="wrap_content"
