--- a/app/src/main/res/layout/activity_sliver_test.xml
+++ b/app/src/main/res/layout/activity_sliver_test.xml
@@ -8,6 +8,10 @@
     android:orientation="vertical"
     tools:context=".SliverTestActivity">
 
+    <TextView
+        android:id="@+id/startTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></TextView>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_test_getThreadCpuTime"
