feat:添加Gc测试用例，底层Hook直接使用logcat打印日志,方便崩溃时排查问题

--- a/app/src/main/res/layout/activity_sliver_test.xml
+++ b/app/src/main/res/layout/activity_sliver_test.xml
@@ -41,6 +41,13 @@
         android:text="获取调用栈防止suspendTimeOut(target)"
         />
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_gc_mock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="模拟不断申请内存，从而触发Gc"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_remove_protected_thread"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
